// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsAssetPageMain should match snapshot 1`] = `
.c0 {
  margin: 0 auto;
  padding-bottom: 2rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<main
  class="c0"
  role="main"
>
  <div
    class="c1"
  >
    <div>
      <!-- unknown block -->
    </div>
    <p
      class="c2"
    >
      As Nigeria authorities still dey try to find solution to light mata, e be like say 26-year old Emeka Nelson don find di solution afta im produce generator wey go dey run on water
    </p>
    <p
      class="c2"
    >
      Wetin ginger Emeka na im friend wey smoke from generator kill.
    </p>
    <div>
      <!-- unknown block -->
    </div>
    <p
      class="c2"
    >
      BBC carri waka go Awka Anambra state inside South-east Nigeria go see di ogbonge invention wey Nelson produce.
    </p>
    <p
      class="c2"
    >
      Nelson wey no be certified engineer struggle to read for elementary school, work as house help for di age of 5, and no get any university education.
    </p>
    <p
      class="c2"
    >
      Wen we go im house, e dey full with Structural drawings and designs wey e pin for wall and na so e dey take im time dey study di drawing.
    </p>
    <p
      class="c2"
    >
      For 16 years, e dey focus to make im dream turn to something real-dat na to make generator wey go run on water.
    </p>
    <p
      class="c2"
    >
      Most of di material wey Nelson take arrange im generator na from  scrap.
    </p>
    <p
      class="c2"
    >
      Di first generator wey im do explode wen e test am. Dis come make am dey doubt di project but afta plenti years of struggle e come get am right.
    </p>
    <p
      class="c2"
    >
      Nelson says im generator get maximum output capacity of 1,000 watts and di voltage dey fluctuate between 220 and 240.
    </p>
    <p
      class="c2"
    >
      E say one litre of clean water fit power di generator for 6 hours, and e no go bring out smoke like oda generators, e dey environment friendly.
    </p>
    <p
      class="c2"
    >
      Dis ogbonge inventor add say im dream na for di generator to dey for millions of homes all ova di world.
    </p>
  </div>
</main>
`;

exports[`Radio Page Main should match snapshot 1`] = `
.c0 {
  margin: 0 auto;
  padding-bottom: 2rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<html
  dir="ltr"
  lang="am"
>
  <head>
    <title>
      ያድምጡ - BBC News
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.com/pathname"
      hreflang="x-default"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.com/pathname"
      hreflang="en"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.co.uk/pathname"
      hreflang="en-gb"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.co.uk/pathname.amp"
      rel="amphtml"
    />
    <link
      href="/news/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News"
      name="application-name"
    />
    <meta
      content="ዝግጅቶቻችንን’"
      name="description"
    />
    <meta
      content="100004154058350"
      name="fb:admins"
    />
    <meta
      content="1609039196070050"
      name="fb:app_id"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="ዝግጅቶቻችንን’"
      name="og:description"
    />
    <meta
      content="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png"
      name="og:image"
    />
    <meta
      content="BBC News"
      name="og:image:alt"
    />
    <meta
      content="en_GB"
      name="og:locale"
    />
    <meta
      content="BBC News"
      name="og:site_name"
    />
    <meta
      content="ያድምጡ - BBC News"
      name="og:title"
    />
    <meta
      content="website"
      name="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      name="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@BBCNews"
      name="twitter:creator"
    />
    <meta
      content="ዝግጅቶቻችንን’"
      name="twitter:description"
    />
    <meta
      content="BBC News"
      name="twitter:image:alt"
    />
    <meta
      content="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png"
      name="twitter:image:src"
    />
    <meta
      content="@BBCNews"
      name="twitter:site"
    />
    <meta
      content="ያድምጡ - BBC News"
      name="twitter:title"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"RadioChannel","url":"https://www.test.bbc.com/pathname","publisher":{"@type":"NewsMediaOrganization","name":"BBC News","publishingPrinciples":"https://www.bbc.com/news/help-41670342","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png"},"thumbnailUrl":"https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png","mainEntityOfPage":{"@type":"WebPage","@id":"https://www.test.bbc.com/pathname","name":"ያድምጡ"}}
    </script>
  </head>
  <body>
    <div>
      <noscript />
      <main
        class="c0"
        role="main"
      >
        <div
          class="c1"
        >
          <div>
            <!-- unknown block -->
          </div>
          <p
            class="c2"
          >
            ዝግጅቶቻችንን’
          </p>
          <div>
            <!-- unknown block -->
          </div>
        </div>
      </main>
    </div>
  </body>
</html>
`;
